Closed Bug 630461 Opened 15 years ago Closed 15 years ago

Comparison between signed and unsigned integers in nsBuiltinDecoderStateMachine.cpp

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: cajbir, Assigned: cajbir)

Details

Attachments

(1 file, 1 obsolete file)

The following compile warnings occur using gcc in nsBuiltinDecoderStateMachine.cpp: content/media/nsBuiltinDecoderStateMachine.cpp: In member function ‘void nsBuiltinDecoderStateMachine::DecodeLoop()’: content/media/nsBuiltinDecoderStateMachine.cpp:254: warning: comparison between signed and unsigned integer expressions content/media/nsBuiltinDecoderStateMachine.cpp:275: warning: comparison between signed and unsigned integer expressions content/media/nsBuiltinDecoderStateMachine.cpp:282: warning: comparison between signed and unsigned integer expressions content/media/nsBuiltinDecoderStateMachine.cpp:332: warning: comparison between signed and unsigned integer expressions
Attached patch fix (obsolete) — Splinter Review
Assignee: nobody → chris.double
Status: NEW → ASSIGNED
Attachment #508676 - Flags: review?(chris)
Comment on attachment 508676 [details] [diff] [review] fix Looks good. Can you move the "{" in multiline if statements to the start of following line, to line up with their "if", as is the convention in the rest of that file? Thanks!
Attachment #508676 - Flags: review?(chris) → review+
Attached patch fixSplinter Review
Change 'if' style to match rest of file as per review comment. r+ carried forward.
Attachment #508676 - Attachment is obsolete: true
Attachment #508972 - Flags: review+
Comment on attachment 508972 [details] [diff] [review] fix Requesting approval to land this minor patch to remove compiler warnings.
Attachment #508972 - Flags: approval2.0?
Comment on attachment 508972 [details] [diff] [review] fix Instead of static_cast<PRUint32>, use PRUint32(...). It's shorter!
Attachment #508972 - Flags: approval2.0? → approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: