Bug 630461 - Fix signed/unsigned comparison compiler warnings in nsBuiltinDecoderStateMachine - r=cpearce a=roc